--- a/uv1.css
+++ b/uv1.css
@@ -11,3 +11,10 @@
     animation-name: example;
     animation-duration: 4s;
 }
+
+.abc{
+    background:url(http://i150.photobucket.com/albums/s85/michelleNpete/BaBas/awesome-beautiful-blue-eyes-cat-cute-Favimcom-110476.jpg);
+    height:400px;
+    width:100%;
+    
+}
