--- a/uv1.css
+++ b/uv1.css
@@ -4,6 +4,13 @@ height:2000px !important;
 background-color:rgba(240,240,220,.7);
 }
 
+@keyframes abc
+{
+  0% { opacity:1;  }
+  50% {opacity:0 ;}
+  100% { opacity:1; }
+  
+}
 .uv
 {
   position:fixed;
@@ -25,6 +32,9 @@ li:nth-child(1)
   font-size: 78px;
     right: 20%;
     top: 34%;
+    animation-name:abc;
+    animation-duration:4s;
+    animation-delay:2s;
 }
 
 li:nth-child(2)
@@ -32,6 +42,9 @@ li:nth-child(2)
   font-size: 39px;
     left: 45;
     top: 600;
+     animation-name:abc;
+    animation-duration:4s;
+    animation-delay:1s;
 }
 
 li:nth-child(3)
@@ -39,6 +52,10 @@ li:nth-child(3)
   font-size: 300;
     right: 65%;
     top: 250;
+ animation-name:abc;
+    animation-duration:2s;
+    animation-delay:2s;
+  
 }
 
 li:nth-child(4)
@@ -46,12 +63,19 @@ li:nth-child(4)
   font-size: 30;
     right: 40%;
     top: 260;
+    
+     animation-name:abc;
+    animation-duration:4s;
+    animation-delay:no-delay;
 }
 
 li:nth-child(5)
 {color:#66BB6A;
   font-size: 145px;
     left: 0;
+     animation-name:abc;
+    animation-duration:3s;
+    animation-delay:2s;
 }
 
 li:nth-child(6)
@@ -59,6 +83,9 @@ li:nth-child(6)
   font-size: 100px;
     left: 40%;
     top: 0;
+     animation-name:abc;
+    animation-duration:2s;
+    animation-delay:1s;
 }
 
 li:nth-child(7)
@@ -66,12 +93,20 @@ li:nth-child(7)
   font-size: 200px;
     top: 478;
     right: 15;
+ animation-name:abc;
+    animation-duration:2s;
+    animation-delay:no-delay;
+  
 }
 
 li:nth-child(8)
 {color:#9E9E9E;
   font-size: 190;
     right: 0;
+ animation-name:abc;
+    animation-duration:3s;
+    animation-delay:1s;
+  
 }
 
 li:nth-child(9)
@@ -79,4 +114,7 @@ li:nth-child(9)
  font-size: 100px;
     right: 40%;
     top: 430;
+     animation-name:abc;
+    animation-duration:3s;
+    animation-delay:no-delay;
 }
