--- a/uv1.css
+++ b/uv1.css
@@ -100,3 +100,44 @@ li:nth-child(9)
     top: 430;
      animation:abc 3s infinite 0s ease-in-out;
 }
+
+.img1
+{
+ height:100px;
+ width:100px;
+}
+.img2
+{
+ height:100px;
+ width:100px;
+}
+.img3
+{
+ height:100px;
+ width:100px;
+}
+.img4
+{
+ height:100px;
+ width:100px;
+}
+.img5
+{
+ height:100px;
+ width:100px;
+}
+.img6
+{
+ height:100px;
+ width:100px;
+}
+.img7
+{
+ height:100px;
+ width:100px;
+}
+.img8
+{
+ height:100px;
+ width:100px;
+}
