--- a/uv1.css
+++ b/uv1.css
@@ -102,42 +102,42 @@ li:nth-child(9)
 }
 
 .img1
-{
+{background-image:url("http://i223.photobucket.com/albums/dd245/2ndsite/The%20Holding%20Pen/091dbe9f.jpg");
  height:100px;
  width:100px;
 }
 .img2
-{
+{background-image:url("");
  height:100px;
  width:100px;
 }
 .img3
-{
+{background-image:url("");
  height:100px;
  width:100px;
 }
 .img4
-{
+{background-image:url("");
  height:100px;
  width:100px;
 }
 .img5
-{
+{background-image:url("");
  height:100px;
  width:100px;
 }
 .img6
-{
+{background-image:url("");
  height:100px;
  width:100px;
 }
 .img7
-{
+{background-image:url("");
  height:100px;
  width:100px;
 }
 .img8
-{
+{background-image:url("");
  height:100px;
  width:100px;
 }
