--- a/uv1.css
+++ b/uv1.css
@@ -100,7 +100,9 @@ li:nth-child(9)
     top: 430;
      animation:abc 3s infinite 0s ease-in-out;
 }
-
+.image{
+  z-index:2;
+}
 .img1
 {background-image:url("http://i223.photobucket.com/albums/dd245/2ndsite/The%20Holding%20Pen/091dbe9f.jpg");
  height:100px;
