--- a/uv1.css
+++ b/uv1.css
@@ -103,43 +103,48 @@ li:nth-child(9)
 .image{
   z-index:2;
 }
+
+
+
 .img1
+{background-image:url("http://i223.photobucket.com/albums/dd245/2ndsite/The%20Holding%20Pen/091dbe9f.jpg");
+     height: 400px;
+    width: 400px;
+    background-size: cover;
+    background-attachment: fixed;
+}
+.img2
 {background-image:url("http://i223.photobucket.com/albums/dd245/2ndsite/The%20Holding%20Pen/091dbe9f.jpg");
  height:100px;
  width:100px;
 }
-.img2
-{background-image:url("");
- height:100px;
- width:100px;
-}
 .img3
-{background-image:url("");
+{background-image:url("http://i223.photobucket.com/albums/dd245/2ndsite/The%20Holding%20Pen/091dbe9f.jpg");
  height:100px;
  width:100px;
 }
 .img4
-{background-image:url("");
+{background-image:url("http://i223.photobucket.com/albums/dd245/2ndsite/The%20Holding%20Pen/091dbe9f.jpg");
  height:100px;
  width:100px;
 }
 .img5
-{background-image:url("");
+{background-image:url("http://i223.photobucket.com/albums/dd245/2ndsite/The%20Holding%20Pen/091dbe9f.jpg");
  height:100px;
  width:100px;
 }
 .img6
-{background-image:url("");
+{background-image:url("http://i223.photobucket.com/albums/dd245/2ndsite/The%20Holding%20Pen/091dbe9f.jpg");
  height:100px;
  width:100px;
 }
 .img7
-{background-image:url("");
+{background-image:url("http://i223.photobucket.com/albums/dd245/2ndsite/The%20Holding%20Pen/091dbe9f.jpg");
  height:100px;
  width:100px;
 }
 .img8
-{background-image:url("");
+{background-image:url("http://i223.photobucket.com/albums/dd245/2ndsite/The%20Holding%20Pen/091dbe9f.jpg");
  height:100px;
  width:100px;
 }
