--- a/uv1.css
+++ b/uv1.css
@@ -118,6 +118,7 @@ li:nth-child(9)
     background-size: cover;
     background-attachment: fixed;
     border-radius:50%;
+    top:200;
 }
 .img2
 {background-image:url("http://i223.photobucket.com/albums/dd245/2ndsite/The%20Holding%20Pen/091dbe9f.jpg");
@@ -125,6 +126,7 @@ li:nth-child(9)
  width:100px;
  background-size: cover;
     background-attachment: fixed;
+    top:400;
 }
 .img3
 {background-image:url("http://i223.photobucket.com/albums/dd245/2ndsite/The%20Holding%20Pen/091dbe9f.jpg");
@@ -132,6 +134,7 @@ li:nth-child(9)
  width:100px;
  background-size: cover;
     background-attachment: fixed;
+    top:600;
 }
 .img4
 {background-image:url("http://i223.photobucket.com/albums/dd245/2ndsite/The%20Holding%20Pen/091dbe9f.jpg");
@@ -139,6 +142,8 @@ li:nth-child(9)
  width:100px;
  background-size: cover;
     background-attachment: fixed;
+top:800;
+  
 }
 .img5
 {background-image:url("http://i223.photobucket.com/albums/dd245/2ndsite/The%20Holding%20Pen/091dbe9f.jpg");
@@ -146,6 +151,8 @@ li:nth-child(9)
  width:100px;
  background-size: cover;
     background-attachment: fixed;
+top:1000;
+  
 }
 .img6
 {background-image:url("http://i223.photobucket.com/albums/dd245/2ndsite/The%20Holding%20Pen/091dbe9f.jpg");
@@ -153,6 +160,8 @@ li:nth-child(9)
  width:100px;
  background-size: cover;
     background-attachment: fixed;
+top:1200;
+  
 }
 .img7
 {background-image:url("http://i223.photobucket.com/albums/dd245/2ndsite/The%20Holding%20Pen/091dbe9f.jpg");
@@ -160,6 +169,8 @@ li:nth-child(9)
  width:100px; 
  background-size: cover;
     background-attachment: fixed;
+top:1400;
+  
 }
 .img8
 {background-image:url("http://i223.photobucket.com/albums/dd245/2ndsite/The%20Holding%20Pen/091dbe9f.jpg");
@@ -167,4 +178,6 @@ li:nth-child(9)
  width:100px;
  background-size: cover;
     background-attachment: fixed;
+top:1600;
+  
 }
