--- a/uv1.css
+++ b/uv1.css
@@ -123,11 +123,12 @@ li:nth-child(9)
 }
 .img2
 {background-image:url("http://i223.photobucket.com/albums/dd245/2ndsite/The%20Holding%20Pen/091dbe9f.jpg");
- height:100px;
- width:100px;
+ height:300px;
+ width:300px;
  background-size: cover;
     background-attachment: fixed;
-    top:400;
+    top:700;
+    left:-90;
 }
 .img3
 {background-image:url("http://i223.photobucket.com/albums/dd245/2ndsite/The%20Holding%20Pen/091dbe9f.jpg");
