--- a/uv1.css
+++ b/uv1.css
@@ -141,11 +141,12 @@ li:nth-child(9)
 }
 .img4
 {background-image:url("http://i223.photobucket.com/albums/dd245/2ndsite/The%20Holding%20Pen/091dbe9f.jpg");
- height:100px;
- width:100px;
+ height:700px;
+ width:700px;
  background-size: cover;
     background-attachment: fixed;
 top:800;
+right:-130;
   
 }
 .img5
