--- a/uv1.css
+++ b/uv1.css
@@ -145,17 +145,18 @@ li:nth-child(9)
  width:700px;
  background-size: cover;
     background-attachment: fixed;
-top:800;
+top:1700;
 right:-130;
   
 }
 .img5
 {background-image:url("http://i223.photobucket.com/albums/dd245/2ndsite/The%20Holding%20Pen/091dbe9f.jpg");
- height:100px;
- width:100px;
+ height:300px;
+ width:300px;
  background-size: cover;
     background-attachment: fixed;
-top:1000;
+top:2300;
+left:100;
   
 }
 .img6
