--- a/uv1.css
+++ b/uv1.css
@@ -155,18 +155,18 @@ right:-130;
  width:300px;
  background-size: cover;
     background-attachment: fixed;
-top:2300;
-left:100;
+top:2450;
+left:5;
   
 }
 .img6
 {background-image:url("http://i223.photobucket.com/albums/dd245/2ndsite/The%20Holding%20Pen/091dbe9f.jpg");
- height:100px;
- width:100px;
+ height:470px;
+ width:470px;
  background-size: cover;
     background-attachment: fixed;
-top:1200;
-  
+top:2500;
+  right:250;
 }
 .img7
 {background-image:url("http://i223.photobucket.com/albums/dd245/2ndsite/The%20Holding%20Pen/091dbe9f.jpg");
