--- a/uv1.css
+++ b/uv1.css
@@ -165,16 +165,17 @@ left:5;
  width:470px;
  background-size: cover;
     background-attachment: fixed;
-top:2500;
-  right:250;
+top:2800;
+  right:126;
 }
 .img7
 {background-image:url("http://i223.photobucket.com/albums/dd245/2ndsite/The%20Holding%20Pen/091dbe9f.jpg");
- height:100px;
- width:100px; 
+ height:560px;
+ width:560px; 
  background-size: cover;
     background-attachment: fixed;
-top:1400;
+top:3000;
+left:-200;
   
 }
 .img8
