--- a/uv1.css
+++ b/uv1.css
@@ -184,6 +184,9 @@ left:-100;
  width:900px;
  background-size: cover;
     background-attachment: fixed;
-top:3700;
+top:3900;
+left:75;
+overflow:hidden;
+position:relative !important;
   
 }
