--- a/uv1.css
+++ b/uv1.css
@@ -105,7 +105,7 @@ li:nth-child(9)
     top: 430;
      animation:abc 3s infinite 0s ease-in-out;
 }
-.image{
+.image{overflow:hidden;
   height:4500px;
   z-index:2;
 }
@@ -187,7 +187,7 @@ left:-100;
     background-attachment: fixed;
 top:4000;
 left:75;
-overflow:hidden;
+
 position:relative !important;
   
 }
