--- a/uv1.css
+++ b/uv1.css
@@ -180,7 +180,7 @@ left:-100;
   
 }
 .img8
-{background-image:url("http://i223.photobucket.com/albums/dd245/2ndsite/The%20Holding%20Pen/091dbe9f.jpg");
+{background-image:url("http://i164.photobucket.com/albums/u8/hemi1hemi/ANIMALS/DOGS/DOG9-17.jpg");
  height:900px;
  width:900px;
  background-size: cover;
